# Mp3Encoder

./: README.md
app/: build.gradle
app/src/androidTest/java/com/jiazhu/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: mp3_encoder.cpp  mp3_encoder.h  native-lib.cpp
app/src/main/cpp/lame/: id3tag.c  machine.h
app/src/main/java/com/jiazhu/demo/: MainActivity.java
app/src/main/java/com/jiazhu/demo/activity/: Mp3Encode2Activity.java  Mp3EncodeActivity.java
app/src/main/java/com/jiazhu/demo/audio/: Mp3EncodeThread.java  Mp3Player.java  Mp3Recorder.java  Mp3RecorderTwo.java  PCMFormat.java
app/src/main/java/com/jiazhu/demo/encoder/: Mp3Encoder.java  Mp3EncoderTwo.java
app/src/main/java/com/jiazhu/demo/util/: FileUtil.java  IntentUtil.java
app/src/main/jni/: Mp3Encoder.cpp  Mp3EncoderTwo.cpp  com_jiazhu_demo_encoder_Mp3Encoder.h  com_jiazhu_demo_encoder_Mp3EncoderTwo.h
app/src/main/res/layout/: activity_main.xml  activity_mp3_encoder.xml  activity_mp3_encoder2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiazhu/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
